--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -20,6 +20,27 @@
 	font-weight: 100;
 }
 
+.dashTitle{
+	font-family: 'Quicksand', sans-serif;
+	font-weight: 100;
+	font-style: italic;
+	color: gray;
+	width: 100%;
+    margin: 0.25em;
+}
+
+.sideTitleMargin{
+	padding: 16px 32px;
+}
+
+.storageChart{
+	text-align: center;
+}
+
+.storageChart p{
+	line-height: 10px;
+}
+
 .loginBox{
 	margin-left: auto;
 	margin-right: auto;
