--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -552,8 +552,8 @@ body .demo-blog {
 }
 
 .demo-avatar {
-  width: 48px;
-  height: 48px;
+  width: 200px;
+  height: auto;
   border-radius: 24px;
 }
 
@@ -582,7 +582,7 @@ body .demo-blog {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 16px;
-  height: 151px;
+  /*height: 151px;*/
 }
 .demo-avatar-dropdown {
   display: -webkit-box;
